Disconnect objdump from the build
The in-tree binutils is old and will not be updated.  Other tools are
migrating to copyfree alternatives but there is not yet a direct
replacement for objdump.  Just remove it as it is not used by the build
and updated, maintained versions are available from ports and packages.

TODO: Add to ObsoleteFiles.inc

--- a/gnu/usr.bin/binutils/Makefile
+++ b/gnu/usr.bin/binutils/Makefile
@@ -9,8 +9,7 @@ SUBDIR=	doc\
 	libbinutils \
 	as \
 	ld \
-	${_objcopy} \
-	objdump \
+	${_objcopy}
 
 .if ${MK_ELFCOPY_AS_OBJCOPY} == "no"
 _objcopy=	objcopy
@@ -20,7 +19,6 @@ SUBDIR_DEPEND_libbinutils=libbfd		# for bfdver.h
 SUBDIR_DEPEND_as=libbfd libiberty libopcodes
 SUBDIR_DEPEND_ld=libbfd libiberty
 SUBDIR_DEPEND_objcopy=libbfd libiberty libbinutils
-SUBDIR_DEPEND_objdump=libbfd libiberty libbinutils libopcodes
 
 .if !make(install)
 SUBDIR_PARALLEL=
