--- a/lib/clang/libllvmsparcdesc/Makefile
+++ b/lib/clang/libllvmsparcdesc/Makefile
@@ -12,7 +12,7 @@ SRCS=	SparcAsmBackend.cpp \
 	SparcMCExpr.cpp \
 	SparcMCTargetDesc.cpp \
 	SparcTargetStreamer.cpp
-CFLAGS+= -I${LLVM_SRCS}/${SRCDIR}/..
+CFLAGS+= -I${LLVM_SRCS}/${SRCDIR:H}
 
 TGHDRS=	SparcGenInstrInfo \
 	SparcGenMCCodeEmitter \
