--- a/lib/clang/include/Makefile
+++ b/lib/clang/include/Makefile
@@ -2,7 +2,7 @@
 
 .include <bsd.own.mk>
 
-LLVM_SRCS= ${.CURDIR}/../../../contrib/llvm
+LLVM_SRCS= ${.CURDIR:H:H:H}/contrib/llvm
 
 .include "../clang.build.mk"
 
