--- a/lib/clang/liblldbPluginProcessElfCore/Makefile
+++ b/lib/clang/liblldbPluginProcessElfCore/Makefile
@@ -4,8 +4,8 @@
 
 LIB=	lldbPluginProcessElfCore
 
-CFLAGS+=-I${.CURDIR}/../../../contrib/llvm/tools/lldb/source/Plugins/Process/POSIX
-CFLAGS+=-I${.CURDIR}/../../../contrib/llvm/tools/lldb/source/Plugins/Process/Utility
+CFLAGS+=-I${.CURDIR:H:H:H}/contrib/llvm/tools/lldb/source/Plugins/Process/POSIX
+CFLAGS+=-I${.CURDIR:H:H:H}/contrib/llvm/tools/lldb/source/Plugins/Process/Utility
 
 SRCDIR=	tools/lldb/source/Plugins/Process/elf-core
 SRCS=	ProcessElfCore.cpp \
