--- a/lib/clang/liblldbPluginProcessPOSIX/Makefile
+++ b/lib/clang/liblldbPluginProcessPOSIX/Makefile
@@ -5,9 +5,9 @@
 LIB=	lldbPluginProcessPOSIX
 
 # include_directories(.)
-CFLAGS+=-I${.CURDIR}/../../../contrib/llvm/tools/lldb/source/Plugins/Process/POSIX
-CFLAGS+=-I${.CURDIR}/../../../contrib/llvm/tools/lldb/source/Plugins/Process/Utility
-CFLAGS+=-I${.CURDIR}/../../../contrib/llvm/tools/lldb/source/Plugins/Process/FreeBSD
+CFLAGS+=-I${.CURDIR:H:H:H}/contrib/llvm/tools/lldb/source/Plugins/Process/POSIX
+CFLAGS+=-I${.CURDIR:H:H:H}/contrib/llvm/tools/lldb/source/Plugins/Process/Utility
+CFLAGS+=-I${.CURDIR:H:H:H}/contrib/llvm/tools/lldb/source/Plugins/Process/FreeBSD
 
 SRCDIR=	tools/lldb/source/Plugins/Process/POSIX
 SRCS=	CrashReason.cpp \
