lld: add a __FreeBSD_version-style identifier to version
This will faciliate a WITH_SYSTEM_LINKER option.

Differential Revision:	https://reviews.freebsd.org/D15110

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -141,6 +141,25 @@ MK_CLANG_BOOTSTRAP=	no
 USING_SYSTEM_COMPILER=	yes
 .endif	# ${WANT_COMPILER_TYPE} == ${COMPILER_TYPE}
 USING_SYSTEM_COMPILER?=	no
+
+.if ${MK_LLD_BOOTSTRAP} == "yes"
+WANT_LINKER_TYPE=	lld
+.else
+WANT_LINKER_TYPE=
+.endif
+.if !defined(WANT_LINKER_FREEBSD_VERSION)
+.if ${WANT_LINKER_TYPE} == "lld"
+WANT_LINKER_VERSION_FILE=	lib/clang/include/lld/Common/Version.inc
+WANT_LINKER_VERSION!= \
+	awk '$$2 == "LLD_VERSION" {split($$3, a, "."); print a[1] * 10000 + a[2] * 100 + a[3]}' \
+	${SRCDIR}/${WANT_LINKER_VERSION_FILE} || echo unknown
+WANT_LINKER_FREEBSD_VERSION!= \
+	awk '$$2 == "LLD_REVISION_STRING" {print $$3}' \
+	${SRCDIR}/${WANT_LINKER_VERSION_FILE} || echo unknown
+.endif
+.endif # !defined(WANT_LINKER_FREEBSD_VERSION)
+
+
 TEST_SYSTEM_COMPILER_VARS= \
 	USING_SYSTEM_COMPILER MK_SYSTEM_COMPILER \
 	MK_CROSS_COMPILER MK_CLANG_BOOTSTRAP \
@@ -186,6 +205,7 @@ _COMPILER_METADATA_VARS=	COMPILER_VERSION \
 				COMPILER_FREEBSD_VERSION \
 				LINKER_VERSION \
 				LINKER_FEATURES \
+				LINKER_FREEBSD_VERSION \
 				LINKER_TYPE
 toolchain-metadata.mk: .PHONY .META
 	@: > ${.TARGET}
